<resources>
    <string name="app_name">Bee Ride </string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyBb7F-tT5vbdBNFsUdrr8kwPJh6SkEeUiI</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_find_ride">Find Ride</string>
    <string name="nav_offer_ride">Offer Ride</string>
    <string name="nav_ride_offered">Ride Offered</string>
    <string name="nav_my_booking">My Booking</string>
    <string name="nav_my_car">My Car</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_rating">Rating</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_about">About Us</string>
    <string name="nav_privacy_policy">Privacy Policy</string>
    <string name="nav_sign_out">Sign Out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Photos</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>
    <string name="activity_title_about_us">Über uns</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="title_activity_details">Contact Details</string>
    <string name="transition_name_name">transition:NAME</string>
    <string name="transition_name_circle">transition:CIRCLE</string>
    <string name="transition_name_phone">transition:PHONE</string>
    <string name="about">About</string>
    <string name="login_success">login success</string>
    <string name="login">LOGIN</string>
    <string name="Username">Email</string>
    <string name="Password">Password</string>
    <string name="forgot_your_password">Forgot your password ?</string>
    <string name="go">GO</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="next">NEXT</string>
    <string name="register">REGISTER</string>
    <string name="hint_username">Enter a new username</string>
    <string name="hint_email_reset">Enter your email</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_phone_number">Enter Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="news">News and Offers</string>
    <string name="translator_name"></string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">Bee Wallet manger</string>
    <string name="fab_scan">Scan Address / Key</string>
    <string name="fab_add_watch">Lookup Address</string>
    <string name="fab_add_aswatch">Add as Watch Only Wallet</string>
    <string name="fab_gen_new">Generate New Wallet</string>
    <string name="fab_request">Request</string>
    <string name="fab_send">Send</string>
    <string name="fab_sendether">Send money</string>
    <string name="fab_setwalletname">Set Wallet Name</string>
    <string name="drawer_import">Import Wallets</string>
    <string name="drawer_about">About Us</string>
    <string name="drawer_donate">"Donate-Investor "</string>
    <string name="fr_price_current_price">Current Price</string>
    <string name="fr_wallet_overall_balance">Overall Balance</string>
    <string name="fr_detail_acc_balance">Account Balance</string>
    <string name="main_ac_wallet_added_suc">Your wallet was added successfully</string>
    <string name="main_ac_wallet_added_er">Wallet was already added</string>
    <string name="main_ac_wallet_added_fatal">Err Not a valid address</string>
    <string name="detail_acc_name_changed_suc">Wallet successfully renamed</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Show zero amount transactions</string>
    <string name="pref_description_social_recommendations">Whether to hide contract calls without any money amount or not</string>
    <string name="pref_title_start">Wallet as default tab</string>
    <string name="pref_sum_start">If enabled the app will start preselected in the wallet tab instead of the price tab</string>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Notification Sync</string>
    <string name="pref_sum_sync_frequency">Sync interval to check for new transactions</string>
    <string name="pref_currencys_title">Display Currency</string>
    <string-array name="pref_currencys">
        <item>USD</item>
        <item>EUR</item>
        <item>CHF</item>
        <item>GBP</item>
        <item>AUD</item>
        <item>CAD</item>
        <item>JPY</item>
        <item>RUB</item>
        <item>FCFA</item>
    </string-array>
    <string-array name="pref_sync_frequency_titles">
        <item>1 hour</item>
        <item>2 hours</item>
        <item>4 hours</item>
        <item>6 hours</item>
        <item>8 hours</item>
        <item>16 hours</item>
        <item>24 hours</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>1</item>
        <item>2</item>
        <item>4</item>
        <item>6</item>
        <item>8</item>
        <item>16</item>
        <item>24</item>
    </string-array>
    <string name="notification_title">Transaction Received</string>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">Incoming Transactions</string>
    <string name="pref_title_new_message_notifications_sum">Notify you about incoming transactions to any of your wallets</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_wallet_gen">Generate Wallet</string>
    <string name="prompt_email">Password</string>
    <string name="prompt_password">Confirm Password</string>
    <string name="action_sign_in">Generate</string>
    <string name="error_invalid_password">This password is too short (Min: 9)</string>
    <string name="error_incorrect_password">Passwords do not match</string>
    <string name="generate_text">You are about to generate a new and encrypted offline wallet on this device. We recommend choosing a strong password in order to be able to ensure the best security possible for your funds. Please note that generating a strong and secure wallet is a highly compute-intensive task that can take up to several minutes! This process will be performed in the background so you can still use your phone as you usually would in the meantime. The progress is displayed in the notification bar of your device and as soon as we have finished generating your wallet, we will let you know.</string>
    <string name="import_text">You are about to import an unencrypted private key. We recommend choosing a strong password in order to be able to ensure the best security possible for your funds. Please note that importing a strong and secure wallet is a highly compute-intensive task that can take up to several minutes! This process will be performed in the background so you can still use your phone as you usually would in the meantime. The progress is displayed in the notification bar of your device and as soon as we have finished generating your wallet, we will let you know.</string>
    <string name="wallet_gen_service_title">Generating New Wallet</string>
    <string name="wallet_gen_service_title_import">Importing Wallet</string>
    <string name="choose_recipient_enterscan">Enter / Scan Recipient Address</string>
    <string name="choose_recipient_contacts">Or Choose Recipient from Address Book</string>
    <string name="choose_your_address">From</string>
    <string name="send_to">To</string>
    <string name="choose_ether_amount">Available money</string>
    <string name="choose_gas">Transaction Cost</string>
    <string name="request_activity_ether">Request Amount</string>
    <string name="request_activity_to">Your Wallets / Addresses</string>
    <string name="no_tx_history">This is the transaction overview showing all money sent and received to and from other people. After adding a wallet and transferring some money to it, the transaction and all future transactions will be displayed here.</string>
    <string name="no_wallet_history">You currently do not have any wallets. You can easily create or import one using the button below.</string>
    <string name="app_intro_text">Welcome to Bee Wallet Mananger -Before starting, please take some time to read through our terms of service.</string>
    <string name="app_intro_title">Bee Wallet Manager</string>
    <string name="app_intro_please_agree">Please read and agree to the terms of service before proceeding</string>
    <string name="app_intro_iagree">I agree to terms of service</string>
    <string name="fragment_send_ether_amount">Amount</string>
    <string name="fragment_send_cheaper">Cheaper</string>
    <string name="fragment_send_faster">Faster</string>
    <string name="fragment_send_total">Total</string>
    <string name="fragment_send_send_button">Send</string>
    <string name="fragment_recipient_hint_address">Address</string>
    <string name="fragment_recipient_continue">Continue</string>
    <string name="fragment_detail_add_sharing">Address Sharing</string>
    <string name="fragment_detail_share_button">Share</string>
    <string name="walletgen_title">Generate Wallet</string>
    <string name="request_ether_title">Request </string>
    <string name="qr_scan_title">QR Address</string>
    <string name="activity_send_title">Transaction</string>
    <string name="last_24_hours">Last 24 Hours</string>
    <string name="last_7_days">Last 7 Days</string>
    <string name="last_30_days">Last 30 Days</string>
    <string name="last_year">Last Year</string>
    <string name="err_no_con">No internet connection</string>
    <string name="wallet_menu_title">Wallet Settings</string>
    <string name="wallet_menu_changename">Change Wallet Name</string>
    <string name="wallet_menu_copyadd">Address to Clipboard</string>
    <string name="wallet_menu_export">Export Wallet</string>
    <string name="wallet_menu_delete">Delete Wallet</string>
    <string name="wallet_suc_exported">Wallet successfully exported</string>
    <string name="wallet_no_permission">Please grant write permission to export wallets</string>
    <string name="wallet_one_at_a_time">Not So Fast</string>
    <string name="wallet_one_at_a_time_text">We are currently generating a wallet for you, you can see the progress in your notification bar. Don\'t worry, we will notify you as soon as your wallet generation is finished :-) If you really wish to generate another one please wait for the current wallet to be completed first.</string>
    <string name="button_ok">OK</string>
    <string name="wallet_removal_title">ATTENTION: Wallet Removal</string>
    <string name="wallet_removal_sure">Are you sure you want to delete your watch only wallet?</string>
</resources>