<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_photo_library_black_24dp"
            android:title="@string/nav_profile" />
        <item
            android:id="@+id/nav_find_ride"
            android:icon="@drawable/ic_local_movies_black_24dp"
            android:title="@string/nav_find_ride" />

        <item
            android:id="@+id/nav_offer_ride"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_offer_ride" />

        <item
            android:id="@+id/nav_ride_offered"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_ride_offered" />

        <item
            android:id="@+id/nav_my_booking"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_my_booking" />

        <item
            android:id="@+id/nav_my_car"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_my_car" />

        <item
            android:id="@+id/nav_notifications_emails"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_notifications" />

        <item
            android:id="@+id/nav_rating"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/nav_rating" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/nav_settings" />

    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_about_us"
                android:title="@string/nav_about" />
            <item
                android:id="@+id/nav_privacy_policy"
                android:title="@string/privacy_policy" />

            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/ic_settings_black_24dp"
                android:title="@string/nav_sign_out" />
        </menu>
    </item>

</menu>
